# proyecto_final_tallerbd

./: README.md  pyproject.toml  test.sqlite3  test_api.py
app/: __init__.py  controllers.py  database.py  dtos.py  models.py  repositories.py
