[project]
name = "proyecto_final_tallerbd"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Estrella Valdes", email = ""},
]
dependencies = [
    "litestar[sqlalchemy,standard]>=2.9.1",
    "httpx>=0.27.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
